# robotframework-saucelabs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_test.yml  publish_to_test_pipy.yml
atest/: acceptance.robot  additional_capabilities.robot  mobile_rdc_native.robot  virtual_mobile_web.robot  web_defaults.robot
src/SauceLabs/: __init__.py  plugin.py
src/robotframework_saucelabs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
